--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,5 +41,12 @@
           "@typescript-eslint/no-unused-vars": "off"
       }
     }
-  ]
+  ],
+  "globals": {
+    "BUILDFLAG": "readonly",
+    "ENABLE_DESKTOP_CAPTURER": "readonly",
+    "ENABLE_ELECTRON_EXTENSIONS": "readonly",
+    "ENABLE_REMOTE_MODULE": "readonly",
+    "ENABLE_VIEW_API": "readonly"
+  }
 }
