--- a/appveyor.yml
+++ b/appveyor.yml
@@ -78,7 +78,7 @@ build_script:
       "https://github.com/electron/electron"
   - ps: >-
       if ($env:GN_CONFIG -eq 'release') {
-        $env:RUN_GCLIENT_SYNC = true
+        cmd /C gclient sync --with_branch_heads --with_tags --reset
       } else {
         cd src\electron
         node script\generate-deps-hash.js
@@ -90,20 +90,15 @@ build_script:
           7z x -y $zipfile -mmt=30 -aoa
           # update external binaries
           python src/electron/script/update-external-binaries.py
-        } else {
+        } else {    
           # file does not exist, gclient sync, then zip
-          $env:RUN_GCLIENT_SYNC = true         
+          cmd /C gclient sync --with_branch_heads --with_tags --reset
           if ($env:TARGET_ARCH -ne 'ia32') {
+            # archive current source for future use 
             # only run on x64/woa to avoid contention saving
-            $env:SAVE_SRC=true
+            7z a $zipfile src -xr!android_webview -xr!electron -xr'!*\.git' -xr!third_party\WebKit\LayoutTests! -xr!third_party\blink\web_tests -xr!third_party\blink\perf_tests -slp -t7z -mmt=30
           }
         }
-      }
-  - if "%RUN_GCLIENT_SYNC%"=="true" ( gclient sync --with_branch_heads --with_tags )  
-  - ps: >-
-      if ($env:SAVE_SRC -eq 'true') {
-        # archive current source for future use             
-        7z a $zipfile src -xr!android_webview -xr!electron -xr'!*\.git' -xr!third_party\WebKit\LayoutTests! -xr!third_party\blink\web_tests -xr!third_party\blink\perf_tests -slp -t7z -mmt=30
       }
   - cd src
   - ps: $env:BUILD_CONFIG_PATH="//electron/build/args/%GN_CONFIG%.gn"
