build: only restore out cache when it isn't in the workspace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1193,9 +1193,9 @@ commands:
       build:
         type: boolean
         default: true
-      out-cache-attached:
+      need-out-cache:
         type: boolean
-        default: false
+        default: true
     steps:
       - when:
           condition: << parameters.attach >>
@@ -1264,7 +1264,10 @@ commands:
             - *step-delete-git-directories
 
             # Electron app
-            - *step-restore-out-cache
+            - when:
+                condition: << parameters.need-out-cache >>
+                steps:
+                  - *step-restore-out-cache
             - *step-electron-build
             - *step-save-out-cache
             - *step-ninja-summary
@@ -1621,7 +1624,7 @@ jobs:
           persist: true
           checkout: false
           attach: true
-          out-cache-attached: true
+          need-out-cache: false
 
   osx-testing-gn-check:
     <<: *machine-mac
@@ -1671,7 +1674,7 @@ jobs:
           persist: true
           checkout: false
           attach: true
-          out-cache-attached: true
+          need-out-cache: false
 
 
   mas-testing-gn-check:
