--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1641,7 +1641,7 @@ jobs:
           persist: true
           checkout: false
           attach: true
-          need-out-cache: false
+          need-out-cache: true
 
   osx-testing-gn-check:
     <<: *machine-mac
@@ -1691,7 +1691,7 @@ jobs:
           persist: true
           checkout: false
           attach: true
-          need-out-cache: false
+          need-out-cache: true
 
 
   mas-testing-gn-check:
